--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <h2>Seguimiento de Actividad Volcánica</h2>
             <input type="file" id="input-excel" />
             <button onclick="processData()">Procesar Datos</button>
+            <button onclick="downloadPDF()">Descargar PDF</button>
             <div id="result">
                 <table id="data-table">
                     <thead>
@@ -61,6 +62,8 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
