--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="video-background">
         <video autoplay muted loop id="bg-video">
-            <source src="background.mp4" type="video/mp4">
+            <source src="Diseño sin título (9).mp4" type="video/mp4">
             Tu navegador no soporta el video en HTML5.
         </video>
     </div>
@@ -65,5 +65,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js"></script>
 </body>
 </html>
