--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="video-background">
         <video autoplay muted loop id="bg-video">
-            <source src="Diseño sin título (9).mp4" type="video/mp4">
+            <source src="Diseño sin título (11).mp4" type="video/mp4">
             Tu navegador no soporta el video en HTML5.
         </video>
     </div>
     <header>
-        <img src="logo.png" alt="Logo" class="logo">
+        <img src="Diseño sin título (17).png" alt="Logo" class="logo">
         <h1>ANÁLISIS DE ACTIVIDAD VOLCÁNICA - DINÁMICA - UCV</h1>
         <nav>
             <ul>
