--- a/index.html
+++ b/index.html
@@ -31,10 +31,19 @@
         </section>
         <section id="activity">
             <h2>Seguimiento de Actividad Volcánica</h2>
+            <label for="so2Max">Valor Máximo de SO2 (Ejemplo: 100.0):</label>
+            <input type="number" id="so2Max" step="0.01" placeholder="100.0"><br>
+            <label for="seismicMax">Valor Máximo de Actividad Sísmica (Ejemplo: 50.0):</label>
+            <input type="number" id="seismicMax" step="0.01" placeholder="50.0"><br>
+            <label for="heightMax">Valor Máximo de Altura Máxima (Cenizas y Gases) (Ejemplo: 2000.0):</label>
+            <input type="number" id="heightMax" step="0.01" placeholder="2000.0"><br>
             <input type="file" id="input-excel" />
             <button onclick="processData()">Procesar Datos</button>
-            <button onclick="downloadPDF()">Descargar PDF</button>
             <div id="result">
+                <h2>Reporte Técnico Anual</h2>
+                <div id="chart-container">
+                    <canvas id="myChart"></canvas>
+                </div>
                 <table id="data-table">
                     <thead>
                         <tr>
@@ -50,8 +59,9 @@
                     </thead>
                     <tbody></tbody>
                 </table>
+                <div id="analysis-summary"></div>
             </div>
-            <canvas id="myChart"></canvas>
+            <button onclick="generatePDF()">Descargar Informe en PDF</button>
         </section>
         <section id="ai">
             <h2>Análisis con IA</h2>
@@ -62,9 +72,7 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
     <script src="script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js"></script>
 </body>
 </html>
